force-app/main/default/objects/Idea_Project__c/Idea_Project__c.object-meta.xml
<CustomObject>
    <label>Idea &amp; Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas &amp; Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>