force-app/main/default/objects/Idea_Project__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <displayFormat>IP-{00000}</displayFormat>
    <label>Business Unit</label>
    <type>AutoNumber</type>
</CustomField>