force-app/main/default/objects/Idea_Project__c/fields/Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name__c</fullName>
    <label>Business Unit Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Strategic_Plan_Pillar__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Bellwether</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Denver TOD</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Enterprise Advisors</fullName>
            </value>
            <value>
                <fullName>Enterprise Homes</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Grants and Contracts</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Gulf Coast</fullName>
            </value>
            <value>
                <fullName>Health and Housing</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Investment Credit</fullName>
            </value>
            <value>
                <fullName>Investment Legal</fullName>
            </value>
            <value>
                <fullName>KIS</fullName>
            </value>
            <value>
                <fullName>Loan Fund</fullName>
            </value>
            <value>
                <fullName>MarComm</fullName>
            </value>
            <value>
                <fullName>Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Northern California</fullName>
            </value>
            <value>
                <fullName>Ohio</fullName>
            </value>
            <value>
                <fullName>Pacific Northwest</fullName>
            </value>
            <value>
                <fullName>Partners Legal</fullName>
            </value>
            <value>
                <fullName>Partner Sustainability</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>