force-app/main/default/objects/Idea_Project__c/fields/Cross_Cutting_Team__c.field-meta.xml
<CustomField>
    <fullName>Cross_Cutting_Team__c</fullName>
    <label>Cross-Cutting Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Strategic_Plan_Pillar__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Consulting</fullName>
            </value>
            <value>
                <fullName>New Capital Aggregation/Product Development</fullName>
            </value>
            <value>
                <fullName>Communities of Opportunity/Housing Security</fullName>
            </value>
            <value>
                <fullName>Advocacy Campaign</fullName>
            </value>
            <value>
                <fullName>Products and Services/Increase Production</fullName>
            </value>
            <value>
                <fullName>State and Local Advocacy/Policy</fullName>
            </value>
            <value>
                <fullName>Sustainable Connected Communities</fullName>
            </value>
            <value>
                <fullName>Public Housing Initiative</fullName>
            </value>
            <value>
                <fullName>Fundraising Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>