force-app/main/default/objects/Idea_Project__c/fields/Date_of_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Update__c</fullName>
    <label>Date of Last Update</label>
    <type>Date</type>
</CustomField>