force-app/main/default/objects/Idea_Project__c/fields/Finance_Billing_Code__c.field-meta.xml
<CustomField>
    <fullName>Finance_Billing_Code__c</fullName>
    <description>Comes from Finance, Peoplesoft - should it be on Project, or KPI?</description>
    <label>Finance Billing Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>