force-app/main/default/objects/Idea_Project__c/fields/Finance_Funding__c.field-meta.xml
<CustomField>
    <fullName>Finance_Funding__c</fullName>
    <description>Total funds from Finance department allotted to the Finance Billing Code</description>
    <label>Finance Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>