force-app/main/default/objects/Idea_Project__c/fields/Project_Actual_s_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Actual_s_Approval_Status__c</fullName>
    <label>Project Actual&#39;s Approval Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>