force-app/main/default/objects/Idea_Project__c/fields/Project_Actual_s_Approved_By_KIS__c.field-meta.xml
<CustomField>
    <fullName>Project_Actual_s_Approved_By_KIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Actual&#39;s Approved By KIS</label>
    <type>Checkbox</type>
</CustomField>