force-app/main/default/objects/Idea_Project__c/fields/Strategic_Plan_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Plan_Pillar__c</fullName>
    <label>Strategic Plan Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Connections</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Homes</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>