force-app/main/default/objects/Idea_Project__c/fields/Update_Comment__c.field-meta.xml
<CustomField>
    <fullName>Update_Comment__c</fullName>
    <label>Update Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>